--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "burger-app",
+  "name": "burger_new",
   "version": "1.0.0",
-  "description": "\"An app that allows users to input a burger, watch their burger list grow, and devour each burger from the list.\",",
   "main": "server.js",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "method-override": "^2.3.10",
-    "mysql": "^2.16.0"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Juhi Patel",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Juhi1919/burger.git"
+  },
+  "author": "Juhi_Patel",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Juhi1919/burger/issues"
+  },
+  "homepage": "https://github.com/Juhi1919/burger#readme",
+  "dependencies": {
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "mysql": "^2.16.0",
+    "router": "^1.3.3"
+  },
+  "devDependencies": {},
+  "description": "## About - Eat Da Burger!! is an app that allows users to input burger names and \"devour\" each burger by clicking a button.  - Users are able to see newly created burgers appear in a list on one side of the page and devoured burgers on the other(right) side."
 }
